[package]
name = "goxlr-profile-loader"

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Common Workspace
log = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
strum = { workspace = true }
enum-map = { workspace = true }

enum-map-derive = "0.17.0"
zip = { version = "6.0.0", default-features = false, features = ["deflate"] }
ritelinked = "0.3.2"
quick-xml = "0.38.3"
fastrand = "2.3.0"