[package]
name = "goxlr-scribbles"
version = "1.2.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Common Workspace
log = { workspace = true }
anyhow = { workspace = true }
image = { workspace = true }

imageproc = "0.25.0"
ab_glyph = "0.2.32"
