[package]
name = "goxlr-types"
version = "1.1.3"
edition = "2021"
authors = ["Nathan Adams <dinnerbone@dinnerbone.com>", "Craig McLure <craig@mclure.net>", "Lars Mühlbauer <lm41@dismail.de>"]
description = "A helper crate for all types used in the GoXLR IPC"
repository = "https://github.com/GoXLR-on-Linux/GoXLR-Utility"
license = "MIT"
categories = ["hardware-support", "api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

[dependencies]
strum = { version = "0.26.3", features = ["derive"] }
serde = { version = "1.0.204", features = ["derive"], optional = true }
clap = { version = "4.5.11", features = ["derive"], optional = true }
serde_repr = "0.1.19"
enum-map = "2.7.3"
enumset = "1.1.5"
derivative = "2.2.0"
