[package]
name = "goxlr-types"
version = "1.2.2"
edition = "2021"
authors = ["Nathan Adams <dinnerbone@dinnerbone.com>", "Craig McLure <craig@mclure.net>", "Lars Mühlbauer <lm41@dismail.de>"]
description = "A helper crate for all types used in the GoXLR IPC"
repository = "https://github.com/GoXLR-on-Linux/GoXLR-Utility"
license = "MIT"
categories = ["hardware-support", "api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

[dependencies]
# Common Workspace
strum = { workspace = true }
serde = { workspace = true, optional = true }
enum-map = { workspace = true }
clap = { workspace = true, optional = true }


serde_repr = "0.1.20"
derivative = "2.2.0"
