[package]
name = "goxlr-types"
description = "A helper crate for all types used in the GoXLR IPC"
categories = ["hardware-support", "api-bindings"]

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []

[dependencies]
# Common Workspace
strum = { workspace = true }
serde = { workspace = true, optional = true }
enum-map = { workspace = true }
clap = { workspace = true, optional = true }


serde_repr = "0.1.20"
derivative = "2.2.0"
