[package]
name = "goxlr-usb"
version = "1.1.3"
edition = "2021"
authors = ["Nathan Adams <dinnerbone@dinnerbone.com>", "Craig McLure <craig@mclure.net>", "Lars Mühlbauer <lm41@dismail.de>"]
description = "A direct interface to the TC-Helicon GoXLR & GoXLR Mini via usb."
repository = "https://github.com/GoXLR-on-Linux/GoXLR-Utility"
license = "MIT"
categories = ["hardware-support", "api-bindings"]

[dependencies]
goxlr-types = { path = "../types" }
rusb = "0.9.4"
thiserror = "1.0.63"
byteorder = "1.5.0"
log = "0.4.22"
enumset = "1.1.5"
strum = "0.26.3"
enum-map = "2.7.3"
anyhow = "1.0.86"
cfg-if = "1.0.0"

# New, some fun async stuff..
tokio = { version = "1.39.1", features = ["sync", "rt", "time"] }

# Dependencies specifically for building under Windows..
[target.'cfg(windows)'.dependencies]
winreg = "0.52.0"
libloading = "0.8.5"
widestring = "1.1.0"
lazy_static = "1.5.0"
windows = { version = "0.58.0", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Devices_DeviceAndDriverInstallation"
] }
